[gd_scene load_steps=16 format=3 uid="uid://0i6pfyt0gmrw"]

[ext_resource type="Script" path="res://presentation/presentation.gd" id="1_chn3l"]
[ext_resource type="Script" path="res://presentation/components/board_canvas/board_canvas.gd" id="2_ckhpm"]
[ext_resource type="PackedScene" uid="uid://uuayuxs0asq3" path="res://presentation/snake_segment_basic.tscn" id="2_h5g20"]
[ext_resource type="FontFile" uid="uid://bck4vn8cx20wc" path="res://assets/fonts/Sagu Exora.ttf" id="4_qfap0"]
[ext_resource type="Script" path="res://hooks/state_hook.gd" id="4_xf8xl"]
[ext_resource type="Script" path="res://hooks/scheduler_hook.gd" id="6_ehmij"]
[ext_resource type="AudioStream" uid="uid://bfw5o0ty5oxyt" path="res://assets/sfx/Damaged.wav" id="7_e6k27"]
[ext_resource type="PackedScene" uid="uid://irjrthrlapp7" path="res://world/world.tscn" id="7_sxa72"]
[ext_resource type="AudioStream" uid="uid://ddy7w4j7prxyp" path="res://assets/sfx/Eat_Trash.wav" id="9_0c5bm"]
[ext_resource type="Script" path="res://audio/audio_hook.gd" id="9_get8u"]
[ext_resource type="AudioStream" uid="uid://o7ife1rmeh2n" path="res://assets/sfx/Power_Up.wav" id="10_hy3no"]
[ext_resource type="AudioStream" uid="uid://f430xbap3xl0" path="res://assets/sfx/Wall_revisit.wav" id="12_e536o"]
[ext_resource type="AudioStream" uid="uid://bocip8wo6kj4a" path="res://assets/sfx/Transition.wav" id="13_kd3kl"]
[ext_resource type="AudioStream" uid="uid://ckjbn4w0n75i4" path="res://assets/sfx/Timer_Countdown_5.wav" id="14_apaxd"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_4dgey"]
frequency = 0.5

[node name="Presentation" type="Node2D"]
script = ExtResource("1_chn3l")
tile_size = 128
snake_segment_scene = ExtResource("2_h5g20")

[node name="World" parent="." instance=ExtResource("7_sxa72")]
position = Vector2(-64, -64)
scatter_noise = SubResource("FastNoiseLite_4dgey")
scatter_frequency = 0.3

[node name="DebugCanvas" type="Node2D" parent="."]
visible = false
script = ExtResource("2_ckhpm")
conversion_color = Color(0.427451, 0.352941, 0, 1)
font = ExtResource("4_qfap0")

[node name="StateHook" type="Node" parent="DebugCanvas"]
script = ExtResource("4_xf8xl")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="StateHook" type="Node" parent="."]
script = ExtResource("4_xf8xl")

[node name="SchedulerHook" type="Node" parent="."]
script = ExtResource("6_ehmij")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_e6k27")
script = ExtResource("9_get8u")

[node name="Eat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0c5bm")
script = ExtResource("9_get8u")

[node name="PowerUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_hy3no")
script = ExtResource("9_get8u")

[node name="WallHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_e536o")
script = ExtResource("9_get8u")

[node name="Transition" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_kd3kl")
bus = &"Sfx Normalize"
script = ExtResource("9_get8u")

[node name="Countdown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_apaxd")
bus = &"Sfx Normalize"
script = ExtResource("9_get8u")

[connection signal="updated" from="DebugCanvas/StateHook" to="DebugCanvas" method="_on_state_hook_updated"]
[connection signal="updated" from="StateHook" to="." method="_on_state_hook_updated"]
